--- a/src/Containers/ClienteForm/ClienteForm.module.css
+++ b/src/Containers/ClienteForm/ClienteForm.module.css
@@ -5,7 +5,7 @@
 
 
 body{
-    background: url('../../Assets/1_M-jCc9NMJIwvvt0aMbsc2g.jpeg') no-repeat center center fixed;;
+    background: url('../../Assets/1_M-jCc9NMJIwvvt0aMbsc2g.jpeg') no-repeat ;
     background-origin: content-box; 
     background-size: cover;
 }
@@ -76,17 +76,6 @@ body > div{
     width: 25%;
 }
 
-
-  button:disabled{
-      background-color: #c7c6c6;
-      cursor:not-allowed;
-      border: 1px solid #ccc;
-      color: #383535;
-  }
-
-  button:not(:disabled){
-      animation: enable 1s linear;
-  }
 
   .upAnimation{  
     animation: enable 1s linear;
