--- a/src/Containers/Confirmacion/ConfirmacionEnvio.module.css
+++ b/src/Containers/Confirmacion/ConfirmacionEnvio.module.css
@@ -1,5 +1,6 @@
 .card{
-    width: 800px;
+    width: 80vw;
+    height: 80vh;
     margin: auto;
     margin-top: 2rem;
     text-align: center;
@@ -7,7 +8,6 @@
     animation-duration: 2s;
     transition-timing-function: ease-in-out;
 }
-
 
 .animation{
     animation-name: flip ;
@@ -35,7 +35,7 @@
         width: 80%;
         height: 40%;
         margin: auto;
-        margin-top: 2rem;
+        margin-top: 1rem;
         text-align: 'center';
         animation-name: flip ;
         animation-duration: 2s;
