--- a/src/hoc/Layout.module.css
+++ b/src/hoc/Layout.module.css
@@ -7,6 +7,8 @@ body{
     background: url('../Assets/1_M-jCc9NMJIwvvt0aMbsc2g.jpeg') no-repeat ;
     background-origin: content-box; 
     background-size: cover;
+    height: 100vh;
+    width: 100vw;
 }
 body > div{
     position: relative;
