--- a/src/Containers/Confirmacion/ConfirmacionEnvio.module.css
+++ b/src/Containers/Confirmacion/ConfirmacionEnvio.module.css
@@ -1,8 +1,7 @@
 .card{
     width: 80vw;
-    height: 80vh;
     margin: auto;
-    margin-top: 2rem;
+    margin-top: 1rem;
     text-align: center;
     animation-name: flip ;
     animation-duration: 2s;
@@ -36,7 +35,7 @@
         height: 40%;
         margin: auto;
         margin-top: 1rem;
-        text-align: 'center';
+        text-align: center;
         animation-name: flip ;
         animation-duration: 2s;
         transition-timing-function: ease-in-out;
@@ -44,14 +43,3 @@
   }
 
 
-  @media (max-width: 1024px) {
-    .card{
-        width: '800px';
-        margin: 'auto';
-        margin-top: '2rem';
-        text-align: 'center';
-        animation-name: flip ;
-        animation-duration: 2s;
-        transition-timing-function: ease-in-out;
-    }
-  }
